# libedr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
build_linux/: install_googletest.sh  install_swig.sh  install_verilator.sh
examples/apb/: build.sh  test.py  testbench.sv  tunneled_apb.sv
examples/jtag_idcode/: build.sh  test.py  testbench.sv  tunneled_jtag.sv
examples/python/apb/: README.md  build.sh  test.py
examples/python/jtag_idcode/: README.md  build.sh  test.py  testbench.sv
examples/systemverilog/apb/: README.md  run.sh  testbench.sv
src/: CMakeLists.txt
src/api/: APB.h  ByteStream.h  ByteStreamTunnel.h  CMakeLists.txt  Common.h  Context.h  DriverBase.h  Error.h  ExecutionGate.h  Jtag.h  JtagChain.h  RVDTM.h  TunnelCommon.h
src/api/swig/: c.i.cmake  gen_system_verilog.py  python.i.cmake
src/libedr/: CMakeLists.txt
src/libedr/driver/: Action.hpp  ActiveQueueEndpoint.hpp  AnyAction.hpp  CMakeLists.txt  CommonActions.hpp  Driver.hpp  DriverImpl.hpp  Error.hpp  HeavyTemplates.cpp  Logger.hpp  PushQueueEndpoint.hpp  TransactionBuffer.hpp  UniqueIDs.hpp
src/libedr/driver/apb/: APB.hpp  APBAction.hpp  CMakeLists.txt  PullAPB.cpp  PullAPB.h
src/libedr/driver/bytestream/: ByteStream.hpp  ByteStreamAction.hpp  CMakeLists.txt  NamedPipe.cpp  NamedPipe.h  TCPSocket.cpp  TCPSocket.h
src/libedr/driver/execution_gate/: CMakeLists.txt  ExecutionGate.cpp  ExecutionGate.h  ExecutionGateAction.hpp
src/libedr/driver/jtag/: CMakeLists.txt  Jtag.hpp  JtagAction.hpp  JtagChain.cpp  JtagChain.h  JtagChainAction.hpp  PassiveJtag.cpp  PassiveJtag.h  PullJtag.cpp  PullJtag.h
src/libedr/driver/riscv/: CMakeLists.txt  RVDTM.hpp  RVDTMAction.hpp  RVJtagDTM.cpp  RVJtagDTM.h
src/libedr/tunnel/: ByteStreamTunnel.cpp  ByteStreamTunnel.h  ByteStreamTunnel.hpp  CMakeLists.txt
src/libedr/util/adt/: BitStream.hpp  BucketArrayMap.hpp  BucketArrayStack.hpp  FreeList.hpp
src/libedr/util/asynchronicity/: AsyncGate.hpp  Asynchronicity.hpp  AsynchronousPrimitives.hpp  ResolutionMap.hpp  ResolutionQueue.hpp
src/libedr/util/memory/: FreeListAllocator.hpp
src/libedr/util/miscellaneous/: Formatting.hpp  LatencyCalibrator.hpp  Overload.hpp  ScopeGuard.hpp  Spinlock.hpp
src/libedr/util/vss/: VSS.hpp  VSSPayloads.hpp
src/verilog/: CMakeLists.txt  edr_context.sv
src/verilog/driver/apb/: edr_apb.sv
src/verilog/driver/byte_stream/: edr_named_pipe_client.sv  edr_tcp_server.sv
src/verilog/driver/execution_gate/: edr_execution_gate.sv
src/verilog/driver/jtag/: edr_jtag.sv
src/verilog/tunnel/: edr_byte_stream_tunnel.sv
test/: CMakeLists.txt
test/python/: CMakeLists.txt  helpers.py  launcher.py
test/python/apb_verilator/: CMakeLists.txt  apb_verilator.sv  test.py
test/python/common_verilog/: test_tunnel.sv
test/python/jtag_verilator/: CMakeLists.txt  jtag_verilator.sv  test.py
test/python/tcp_socket_loopback/: CMakeLists.txt  test.py
test/python/veer_eh2_debug/: CMakeLists.txt  tb_top.sv  test.py  veer_eh2_verilator_config.vh
test/python_stubs/: edr.py
test/unit/: CMakeLists.txt
test/unit/driver/: CMakeLists.txt  Mocks.h
test/unit/driver/bytestream/: CMakeLists.txt  Echo.cpp  Mocks.h
test/unit/driver/jtag/: CMakeLists.txt  JtagChain.cpp  PassiveJtag.cpp  PullJtag.cpp
test/unit/tunnel/: ByteStreamTunnel.cpp  CMakeLists.txt
test/unit/util/: CMakeLists.txt
test/unit/util/adt/: BitStream.cpp  CMakeLists.txt
test/unit/util/asynchronicity/: Asynchronicity.cpp  CMakeLists.txt  Mocks.h
test/unit/util/vss/: CMakeLists.txt  Mocks.h  VSS.cpp  VSSPayloads.cpp
